# MLOPS_HW_1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  logger.py  main.py  models_manager.py  schemas.py
app/dashboard/: app.py
app/gprc_service/: client.py  model_service.proto  server.py
data_examples/: postman_collection.json  predict_example.json  train_example.json
